Go lower: Java 11